# 0xGame2024

./: README.md
Crypto/Week 1/Code/: secret.py  task.py
Crypto/Week 1/Code-Vigenere/: secret.py  task.py
Crypto/Week 1/Number-Theory-CRT/: secret.py  task.py
Crypto/Week 1/RSA-Baby/: task.py
Crypto/Week 1/RSA-Easy/: task.py
Crypto/Week 2/: LFSR-baby.py
Crypto/Week 2/Diffie-Hellman/: docker-compose.yml  proof.py  secret.py  solution.py  task.py
Crypto/Week 2/Elgamal/: Dockerfile  docker-compose.yml  secret.py  solution.py  task.py  util.py  推导.md
Crypto/Week 2/LFSR-baby/: secret.py  solution.py
Crypto/Week 2/LFSR-easy/: secret.py  task.py
Crypto/Week 2/RC4/: docker-compose.yml  secret.py  solution.py  task.py  util.py
Crypto/Week 2/RSA-IV/: Dockerfile  challenge.py  docker-compose.yml  secret.py  task.py  util.py
Crypto/Week 3/ECC-DH/: Dockerfile  Util.py  docker-compose.yml  secret.py  task.py
Crypto/Week 3/ECC-baby/: Util.py  secret.py  task.py
Crypto/Week 3/EzLogin/: Dockerfile  docker-compose.yml  exp.py  secret.py  task.py
Crypto/Week 3/LLL-I/: secret.py  task.py
Crypto/Week 4/: SIDH.sage
Misc/Week 2/: 我叫曼波.py
Misc/Week 3/: Happy 1024.txt
Misc/Week 4/: Untouchable flag.py
Reverse/Week 3/: babyASM.txt
Web/Week 3/paste_bin/paste_bin/: Cargo.toml
Web/Week 3/paste_bin/paste_bin/public/: index.html  report.html  view.html
Web/Week 3/paste_bin/paste_bin/src/: bot.rs  db.rs  lib.rs  main.rs  model.rs  route.rs
Web/Week 3/paste_bin/paste_bin/static/: index.js  report.js  view.js
Web/Week 4/rogue_mysql/rogue_mysql/: Cargo.toml
(+168 files in other folders)
