[package]
name = "paste_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.9.0" }
env_logger = "0.11.5"
fantoccini = "0.21.2"
log = "0.4.22"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
