[package]
name = "rogue_mysql"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
env_logger = "0.11.5"
futures-core = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
mysql_async = "0.34.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = "0.7.12"
